--- a/src/app/new-inventory/new-inventory.component.html
+++ b/src/app/new-inventory/new-inventory.component.html
@@ -1,15 +1,34 @@
-<button (click)="goBack()">back</button>
+
+    
+    <mat-toolbar class="title">
+        <button (click)="goBack()">back</button>
+        <p></p>
+        <span>New Inventory</span>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+
+<p></p>
+
+
+
 
 
 <h1>Create a new Inventory</h1>
 
 <div class="new-form">
-    <form (ngSubmit)="onSubmit()" #invForm = "ngForm">
-        <label for="item">Item name</label>
+    <form (ngSubmit)="onSubmit()" #invForm="ngForm">
+        <label for="item">Item name: </label>
+       
         <input type="text" [(ngModel)]="model.item" name="item">
-        <label for="units">Units</label>
+        <br>
+        <br>
+        <label for="units">Units: </label>
+        
         <input type="number" [(ngModel)]="model.units" name="units">
+        <br>
+        <br>
         <button type="submit">Submit</button>
     </form>
-    
+
+
 </div>
