--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,27 +1,30 @@
 .title {
-    text-align: center;
+    color: rgb(23, 21, 21);
+    justify-content: center;
+    font-size: 35px;
+}
+
+.interface{
+    display: flex;
 }
 
 .container {
     display:flex;
     flex-direction: row;
     justify-content: space-around;
+    width: 100%;
 }
 
-.navbar {
-    background-color: antiquewhite;
-    font-size: 30px;
+.navbar{
+    width: 30vh;
+    height: 100vh;
+    display: flex;
 }
 
-.navbar a{
-    text-decoration: none;
-    color:black
-    
+.navbar :hover{
+    color: rgb(243, 241, 186);
 }
 
-.navbar a:hover{
-    color: red;
-}
 
 
 .main {
