--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -1,3 +1,11 @@
+.title {
+    color: rgb(23, 21, 21);
+    justify-content: center;
+    font-size: 20px;
+    display: inline-flex;
+}
+
+
 .control{
     display: flex;
     justify-content: space-around;
@@ -25,6 +33,34 @@
     background-color: rgb(239, 43, 53);
     color: rgb(232, 235, 238);
 }
+
+.list-item{
+    display: inline-flex;
+    flex-direction: row;
+    border: 1px solid;
+    background-color: rgb(244, 225, 217);
+    width: 400px;
+    justify-content: space-between;
+   
+}
+
+
+.list-item-name{
+    font-size: 60px;
+}
+
+
+.list-item-button {
+    display: flex;
+    margin-top: 15px;
+    padding: 5px;
+}
+
+.list-item-button :hover{
+    color: red;
+    cursor: pointer;
+}
+
 
 .inventory-list{
     
