--- a/src/app/inventory/inventory.component.html
+++ b/src/app/inventory/inventory.component.html
@@ -1,30 +1,51 @@
+<mat-toolbar class="title">
+    <span>My Inventories</span>
+</mat-toolbar>
 
-<h1>My inventories</h1>
+<mat-divider></mat-divider>
+<p></p>
 <div class="control">
-<div class="create">
-    <button routerLink="/create">Create a New Inventory</button>
-</div>
-<div class="delete">
-    <button (click)="deleteAll()">Delete All Inventories</button>
-</div>
+
+
+    <button mat-raised-button color="primary" routerLink="/create">Create New</button>
+    <button mat-raised-button color="warn" (click)="deleteAll()">Delete All</button>
 </div>
 <p></p>
-<div class="inventory-list">
-    <div class="invs" *ngFor="let inv of inventories">
-        <div class="inv" routerLink={{inv.id}} [class.selected]="inv === selectedInv" type="button"
-            (click)="onSelect(inv)">
-            <a>{{inv.item}} {{inv.units}}</a>
 
-        </div>
-        <div class="inv-control">
-            <button (click)="unitsControl(inv, true)">+</button>
+
+<p></p>
+
+<mat-list class="list" *ngFor="let inv of inventories">
+    <mat-card class="list-item">
+        <mat-card-content class="list-item-button">
+            <mat-icon type="button" (click)="unitsControl(inv, false)">exposure_neg_1</mat-icon>
             <p></p>
-            <button (click)="unitsControl(inv, false)">-</button>
+            <mat-icon type="button" (click)="unitsControl(inv, true)">exposure_plus_1</mat-icon>
+            <p></p>
+            
+        </mat-card-content>
+        <div class="list-item-name">
+            <mat-list-item>
+                
+                <span matListItemTitle (click)="clickItem(inv)" style="font-weight:bold; font-size:20px; font-family:Courier New;">{{inv.item}}</span>
+                <span matListItemLine>Units: {{inv.units}}</span>
+            </mat-list-item>
         </div>
-    </div>
-</div>
+        <div class="list-item-button">
+            <mat-icon type="button" (click)="onSelect(inv)">edit</mat-icon>
+            <p></p>
+            <mat-icon type="button" (click)="deleteOne(inv)">delete</mat-icon>
+            <p></p>
+            
+        </div>
 
-<p></p>
+        
+
+        
+    </mat-card>
+
+
+</mat-list>
 
 
 
