improved UI with Angular materials, add more features on items such as category, sort

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<h1>Dashboard</h1>
+<mat-toolbar class="title">
+    <span>Dashboard</span>
+</mat-toolbar>
+<mat-divider></mat-divider>
+<h1>Welcome to Inventory App!</h1>
