--- a/src/app/inventory-details/inventory-details.component.html
+++ b/src/app/inventory-details/inventory-details.component.html
@@ -1,20 +1,13 @@
-<button class="back" (click)="goBack()">
-    Back
-</button>
+<mat-toolbar class="title">
+    <span>View {{selectedInv.item}}</span>
+</mat-toolbar>
+<mat-divider></mat-divider>
+<p></p>
 
-<h1>View Inventory</h1>
+
 <div *ngIf="selectedInv">
-    <h2>Item:       {{selectedInv.item}}</h2>
-    <h3>Units:              {{selectedInv.units}}</h3>
-
-    <button class="update" type="button" (click)="updateInventory(selectedInv)">
-        <span class="invs">Update</span>
-    </button>
-
-    <button class="delete" (click)="deleteInventory(selectedInv)">
-        Delete
-    </button>
+    <div class="desc">
+        <h3>Description:</h3>
+        <h4>{{selectedInv.description}}</h4>
+    </div>
 </div>
-
-
-
