--- a/src/app/new-inventory/new-inventory.component.html
+++ b/src/app/new-inventory/new-inventory.component.html
@@ -1,11 +1,7 @@
-
-    
-    <mat-toolbar class="title">
-        <button (click)="goBack()">back</button>
-        <p></p>
-        <span>New Inventory</span>
-    </mat-toolbar>
-    <mat-divider></mat-divider>
+<mat-toolbar class="title">
+    <span>New Inventory</span>
+</mat-toolbar>
+<mat-divider></mat-divider>
 
 <p></p>
 
@@ -17,18 +13,55 @@
 
 <div class="new-form">
     <form (ngSubmit)="onSubmit()" #invForm="ngForm">
-        <label for="item">Item name: </label>
-       
-        <input type="text" [(ngModel)]="model.item" name="item">
+        <mat-form-field>
+            <mat-label for="item">Name </mat-label>
+            <input matInput type="text" [(ngModel)]="model.item" name="item" placeholder="Item name">
+        </mat-form-field>
         <br>
         <br>
-        <label for="units">Units: </label>
-        
-        <input type="number" [(ngModel)]="model.units" name="units">
+        <mat-form-field>
+            <mat-label for="units">Units: </mat-label>
+            <input matInput type="number" [(ngModel)]="model.units" name="units" placeholder="Units">
+        </mat-form-field>
         <br>
         <br>
-        <button type="submit">Submit</button>
+        <mat-form-field>
+            <mat-label for="price">Price: </mat-label>
+            <input matInput type="number" [(ngModel)]="model.price" name="price" placeholder="Price">
+        </mat-form-field>
+        <br>
+        <br>
+
+
+        <mat-form-field>
+            <mat-label for="category">Category</mat-label>
+            <mat-select name="category" [(ngModel)]="model.category">
+                <mat-option *ngFor="let c of category" [value]="c">
+                    {{c}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <br>
+        <br>
+        <mat-form-field>
+            <mat-label>For Sale? </mat-label>
+            <mat-select name="sale" [(ngModel)]="model.sale">
+                <mat-option [value]=true>Yes</mat-option>
+                <mat-option [value]=false>No</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <br>
+        <br>
+        <mat-form-field>
+            <mat-label for="description">Description: </mat-label>
+            <textarea matInput [(ngModel)]="model.description" name="description"></textarea>
+        </mat-form-field>
+        <br>
+        <br>
+
+        <button mat-button color="primary" type="submit">Submit</button>
     </form>
+
 
 
 </div>
