--- a/src/app/inventory-details/inventory-details.component.css
+++ b/src/app/inventory-details/inventory-details.component.css
@@ -4,3 +4,9 @@
     font-size: 20px;
     display: inline-flex;
 }
+
+.property-font{
+    font-size: 25px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 10px;
+}
