make category dynamic

--- a/src/app/new-inventory/new-inventory.component.html
+++ b/src/app/new-inventory/new-inventory.component.html
@@ -36,7 +36,7 @@
         <mat-form-field>
             <mat-label for="category">Category</mat-label>
             <mat-select name="category" [(ngModel)]="model.category">
-                <mat-option *ngFor="let c of category" [value]="c">
+                <mat-option *ngFor="let c of categoryList" [value]="c">
                     {{c}}
                 </mat-option>
             </mat-select>
