--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,21 @@
 <mat-toolbar color="primary" class="navbar">
   <mat-toolbar-row>
     <span>Dashboard</span>
-    <button mat-icon-button routerLink="/dashboard" class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button routerLink="/dashboard" class="example-icon">
       <mat-icon>menu</mat-icon>
     </button>
   </mat-toolbar-row>
 
   <mat-toolbar-row>
     <span>My Inventories</span>
-    <button mat-icon-button routerLink="/inventories" class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button routerLink="/inventories" class="example-icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar-row>
+
+  <mat-toolbar-row>
+    <span>Category</span>
+    <button mat-icon-button routerLink="/category" class="example-icon">
       <mat-icon>menu</mat-icon>
     </button>
   </mat-toolbar-row>
