--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -1,24 +1,45 @@
 .title {
     color: rgb(23, 21, 21);
-    justify-content: center;
     font-size: 20px;
-    display: inline-flex;
-}
-
-
-.category{
-    justify-content: space-around;
-    display: flex;
-}
-
-.control{
     display: flex;
     justify-content: space-around;
 }
+
+.invs-main{
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+   
+    
+    height:100%;
+    width: 100%;
+}
+
+.left-main{
+    width: 20%;
+    min-width: 20%;
+    display: flex;
+    flex-direction: column;
+    border-right: solid 1px rgb(205, 205, 205);
+    text-align: center;
+    overflow-y:auto;
+    height: 100%;
+
+}
+
+.right-main{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y:auto;
+    height: 100%;
+}
+
 
 .sort {
     display: flex;
     justify-content: space-around;
+    width: 100%;
 }
 
 .sort-button{
@@ -48,19 +69,18 @@
     color: rgb(232, 235, 238);
 }
 
-.list{
-    display:inline-flex;
-    flex-wrap: wrap;
-    text-align: center;
-    flex-direction: row;
+.list-wrap{
+    display:flex;
+    height: 700px;
+    gap: 20px 20px;
+    flex-flow: wrap;
     justify-content: center;
-    padding: 10px;
+    overflow-y: auto;
 }
 
 .list-item{
-    flex: 50%;
-    display: inline-flex;
-    padding: 30px;
+    width: 250px;
+    height: 150px;
 }
 
 
@@ -78,19 +98,36 @@
 
 .list-item-name{
     font-size: 60px;
+    display: flex;
+    text-align: center;
+}
+
+.list-item-title{
+    cursor: pointer;
+}
+
+.list-item-title :hover{
+    color: brown;
 }
 
 
 .list-item-button {
     display: flex;
-    margin-top: 15px;
+  
     padding: 5px;
-    justify-content: space-between;
+    justify-content: space-around;
+    
 }
 
 .list-item-button :hover{
     color: red;
     cursor: pointer;
+}
+
+.units-price{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 
