--- a/src/app/new-inventory/new-inventory.component.css
+++ b/src/app/new-inventory/new-inventory.component.css
@@ -4,8 +4,15 @@
     color: rgb(23, 21, 21);
     justify-content: center;
     font-size: 20px;
-    display: inline-flex;
+    display: flex;
     
+}
+
+.new-form{
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+   text-align: center;
 }
 
 .back{
