--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,8 +28,22 @@
       </mat-toolbar-row>
 
       <mat-toolbar-row>
-        <span>Category</span>
+        <span>Stores</span>
         <button mat-icon-button routerLink="/category" class="example-icon" (click)="hideMenu()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </mat-toolbar-row>
+
+      <mat-toolbar-row>
+        <span>Repository</span>
+        <button mat-icon-button routerLink="/repo" class="example-icon" (click)="hideMenu()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </mat-toolbar-row>
+
+      <mat-toolbar-row>
+        <span>Shopping Cart</span>
+        <button mat-icon-button routerLink="/shopping" class="example-icon" (click)="hideMenu()">
           <mat-icon>menu</mat-icon>
         </button>
       </mat-toolbar-row>
