--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,4 +2,6 @@
     <span>Dashboard</span>
 </mat-toolbar>
 <mat-divider></mat-divider>
+<div class="welcome">
 <h1>Welcome to Inventory App!</h1>
+</div>
