--- a/src/app/new-inventory/new-inventory.component.html
+++ b/src/app/new-inventory/new-inventory.component.html
@@ -34,7 +34,7 @@
 
         <div class="form3">
             <mat-form-field>
-                <mat-label for="category">Category</mat-label>
+                <mat-label for="category">Store</mat-label>
                 <mat-select name="category" [(ngModel)]="model.category">
                     <mat-option *ngFor="let c of categoryList" [value]="c">
                         {{c}}
