--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,9 +1,9 @@
-<h1 class="title">Create new category</h1>
+<h1 class="title">Create a New Store</h1>
 <div class="category-form">
     
     <form (ngSubmit)="createCategory()" #invForm="ngForm">
         <mat-form-field>
-            <mat-label for="name">New category Name </mat-label>
+            <mat-label for="name">New Store Name </mat-label>
             <input matInput type="text" [(ngModel)]="newCategory.name" name="name" placeholder="Name">
         </mat-form-field>
         <button mat-button color="primary" type="submit">Create</button>
