--- a/src/app/inventory-details/inventory-details.component.html
+++ b/src/app/inventory-details/inventory-details.component.html
@@ -12,9 +12,10 @@
 
             <br>
             <div class="item-bar">
-                <h3 class="property-font">Category: {{selectedInv.category}}</h3>
+                <h3 class="property-font">Store: {{selectedInv.category}}</h3>
                 <h3 class="property-font">Units: {{selectedInv.units}}</h3>
                 <h3 class="property-font">Price: €{{selectedInv.price}}</h3>
+                <h3>{{selectedInv.shopping}}</h3>
                 <h3 class="property-font">Total Value: €{{selectedInv.units * selectedInv.price}}</h3>
                 <h3 class="property-font" *ngIf="selectedInv.sale==true">For sale</h3>
                 <h3 class="property-font" *ngIf="selectedInv.sale==false">Not for sale</h3>
