--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -72,15 +72,17 @@
 .list-wrap{
     display:flex;
     height: 700px;
-    gap: 20px 20px;
+    gap: 0px 20px;
     flex-flow: wrap;
     justify-content: center;
     overflow-y: auto;
+    flex-grow: 1;
+    flex-direction: row;
 }
 
 .list-item{
-    width: 250px;
-    height: 150px;
+    width: 350px;
+    height: 200px;
 }
 
 
@@ -157,4 +159,47 @@
 .inv-control{
     display: flex;
     font-size: 10px;
+}
+
+.add-cart{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+.add-shopping-window{
+    height: 400px;
+    width: 350px;
+    background-color: rgb(245, 253, 224);
+    border-radius: 30px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    
+}
+
+.shopping-title-cancel{
+    display: flex;
+    flex-direction: row;
+    top: 0;
+}
+
+.cancel-shopping-button{
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.shopping-info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.shopping-prompt{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
